attempted to fix inadvertente screen shift

--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ footer {
 }
 @keyframes animationDropDown {
     0% {
-        margin-top: -10rem;
+        margin-top: -50vh;
     }
     80% {
-        margin-top: 12rem;
+        margin-top: 20vh;
     }
     100% {
         margin-top: 5vh;
@@ -135,13 +135,13 @@ footer {
 }
 @keyframes animationSlideFromLeft {
     0% {
-        margin-left: -350rem;
+        margin-left: -200vw;
     }
     20% {
-        margin-left: -350rem;
+        margin-left: -200vw;
     }
     90% {
-        margin-right: -15rem;
+        margin-left: 30vw;
     }
     100% {
     }
